single jar launch